--- a/flower.html
+++ b/flower.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+as<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -11,10 +11,10 @@
   <body class="container">
     <audio src="sonidos/Floricienta.mp3" autoplay></audio>
     <h1 class="titulo">
-      Estas flores amarillas me recuerdan la felicidad que traes a mi vida.
+      Estas flores amarillas me recuerdan la felicidad que traes a nuestras vidas.
       <br />
       <br />
-      Gracias por hacer mis días más brillantes con tu compañía.
+      Gracias por hacer los días más brillantes con tu compañía.
     </h1>
 
     <div class="night"></div>
